adjusting preprocessing - stopwords

--- a/code/03_PreprocessingText.ipynb
+++ b/code/03_PreprocessingText.ipynb
@@ -5,16 +5,7 @@
    "execution_count": 1,
    "id": "b4bf4618",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\anama\\anaconda3\\envs\\topicmodelin\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import datetime\n",
     "import json\n",
@@ -31,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "id": "71424e34",
    "metadata": {},
    "outputs": [],
@@ -39,35 +30,42 @@
     "client = MongoClient('mongodb://localhost:27017')\n",
     "database = client['Thesis']\n",
     "collectionDB = database.get_collection(\"text\")\n",
-    "collectionWords = database.get_collection(\"words\")\n",
-    "collectionDep_1 = database.get_collection(\"text_dep1\")"
+    "collectionDep_2 = database.get_collection(\"text_dep2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
+   "id": "2846be62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop_words = pd.read_excel('../input/stop_words_lemma.xlsx')['stop_lemma'].to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "42fd046b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def preproccess_0(texto):\n",
+    "    texto = texto.replace('\\n', ' ')\n",
+    "    texto = texto.replace('\\t', ' ')\n",
+    "    texto = re.sub(' +', ' ', texto)\n",
     "    minusculas = texto.lower()\n",
     "    sin_tildes = unidecode(minusculas)\n",
     "\n",
     "    # Step 1: Eliminar caracteres especiales.\n",
-    "    texto_sin_caracteres_especiales = re.sub(r\"[^a-zA-Z0-9áéíóúüñÁÉÍÓÚÜÑ\\s]\", \"\", sin_tildes)\n",
+    "    texto_sin_caracteres_especiales = re.sub(r\"[^a-zA-ZáéíóúüñÁÉÍÓÚÜÑ\\s]\", \" \", sin_tildes)\n",
     "    # Step 2: Eliminar palabras con más de 20 caracteres o con menos de 2.\n",
     "    palabras = texto_sin_caracteres_especiales.split()\n",
     "    palabras_filtradas = []\n",
     "    for palabra in palabras:\n",
     "        if len(palabra) > 1 and len(palabra) <= 20:\n",
     "            palabras_filtradas.append(palabra)\n",
-    "    texto_filtrado = \" \".join(palabras_filtradas)\n",
-    "    \n",
-    "    # Step 3: Eliminar stopwords.\n",
-    "    #doc = nlp(texto_filtrado)\n",
-    "    #palabras_sin_stopwords = [token.text for token in doc if not token.is_stop]\n",
-    "    #texto_sin_stopwords = \" \".join(palabras_sin_stopwords)   \n",
+    "    texto_filtrado = \" \".join(palabras_filtradas) \n",
     "    \n",
     "    if len(texto_filtrado) > 1000000:\n",
     "        sin_tildes = \" \"\n",
@@ -85,98 +83,24 @@
     "        palabras_lematizadas = [token.lemma_ for token in doc]\n",
     "        text_lemma = \" \".join(palabras_lematizadas)\n",
     "        sin_tildes = unidecode(text_lemma)     \n",
-    "    return sin_tildes"
+    "    # Step 3: Eliminar stopwords.\n",
+    "    palabras2 = sin_tildes.split()\n",
+    "    no_stop = [word for word in palabras2 if word not in stop_words]\n",
+    "    texto_sin_stopwords = \" \".join(no_stop)  \n",
+    "    return texto_sin_stopwords"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "f6ca13da",
+   "execution_count": null,
+   "id": "381d5f64",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Start  -------------------------------\n",
-      "21:40:47.212055\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\anama\\AppData\\Local\\Temp\\ipykernel_47324\\1816659237.py:8: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  frequency = pd.Series(re.findall(r'\\w+', texto)).value_counts().to_dict()\n",
-      "C:\\Users\\anama\\AppData\\Local\\Temp\\ipykernel_47324\\1816659237.py:8: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  frequency = pd.Series(re.findall(r'\\w+', texto)).value_counts().to_dict()\n",
-      "C:\\Users\\anama\\AppData\\Local\\Temp\\ipykernel_47324\\1816659237.py:8: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  frequency = pd.Series(re.findall(r'\\w+', texto)).value_counts().to_dict()\n",
-      "C:\\Users\\anama\\AppData\\Local\\Temp\\ipykernel_47324\\1816659237.py:8: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  frequency = pd.Series(re.findall(r'\\w+', texto)).value_counts().to_dict()\n",
-      "C:\\Users\\anama\\AppData\\Local\\Temp\\ipykernel_47324\\1816659237.py:8: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  frequency = pd.Series(re.findall(r'\\w+', texto)).value_counts().to_dict()\n",
-      "C:\\Users\\anama\\AppData\\Local\\Temp\\ipykernel_47324\\1816659237.py:8: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  frequency = pd.Series(re.findall(r'\\w+', texto)).value_counts().to_dict()\n",
-      "C:\\Users\\anama\\AppData\\Local\\Temp\\ipykernel_47324\\1816659237.py:8: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  frequency = pd.Series(re.findall(r'\\w+', texto)).value_counts().to_dict()\n",
-      "C:\\Users\\anama\\AppData\\Local\\Temp\\ipykernel_47324\\1816659237.py:8: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  frequency = pd.Series(re.findall(r'\\w+', texto)).value_counts().to_dict()\n",
-      "C:\\Users\\anama\\AppData\\Local\\Temp\\ipykernel_47324\\1816659237.py:8: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  frequency = pd.Series(re.findall(r'\\w+', texto)).value_counts().to_dict()\n",
-      "C:\\Users\\anama\\AppData\\Local\\Temp\\ipykernel_47324\\1816659237.py:8: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  frequency = pd.Series(re.findall(r'\\w+', texto)).value_counts().to_dict()\n",
-      "C:\\Users\\anama\\AppData\\Local\\Temp\\ipykernel_47324\\1816659237.py:8: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  frequency = pd.Series(re.findall(r'\\w+', texto)).value_counts().to_dict()\n",
-      "C:\\Users\\anama\\AppData\\Local\\Temp\\ipykernel_47324\\1816659237.py:8: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  frequency = pd.Series(re.findall(r'\\w+', texto)).value_counts().to_dict()\n",
-      "C:\\Users\\anama\\AppData\\Local\\Temp\\ipykernel_47324\\1816659237.py:8: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  frequency = pd.Series(re.findall(r'\\w+', texto)).value_counts().to_dict()\n",
-      "C:\\Users\\anama\\AppData\\Local\\Temp\\ipykernel_47324\\1816659237.py:8: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  frequency = pd.Series(re.findall(r'\\w+', texto)).value_counts().to_dict()\n",
-      "C:\\Users\\anama\\AppData\\Local\\Temp\\ipykernel_47324\\1816659237.py:8: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  frequency = pd.Series(re.findall(r'\\w+', texto)).value_counts().to_dict()\n",
-      "C:\\Users\\anama\\AppData\\Local\\Temp\\ipykernel_47324\\1816659237.py:8: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  frequency = pd.Series(re.findall(r'\\w+', texto)).value_counts().to_dict()\n",
-      "C:\\Users\\anama\\AppData\\Local\\Temp\\ipykernel_47324\\1816659237.py:8: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  frequency = pd.Series(re.findall(r'\\w+', texto)).value_counts().to_dict()\n",
-      "C:\\Users\\anama\\AppData\\Local\\Temp\\ipykernel_47324\\1816659237.py:8: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  frequency = pd.Series(re.findall(r'\\w+', texto)).value_counts().to_dict()\n",
-      "C:\\Users\\anama\\AppData\\Local\\Temp\\ipykernel_47324\\1816659237.py:8: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  frequency = pd.Series(re.findall(r'\\w+', texto)).value_counts().to_dict()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "End -------------------------------\n",
-      "10:30:27.285913\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Start  -------------------------------\")\n",
-    "print(datetime.datetime.now().time())\n",
-    "count = 0\n",
-    "for document in collectionDB.find():\n",
-    "    text = document[\"text\"]\n",
-    "    number = document[\"file\"]\n",
-    "    texto = preproccess_0(text)\n",
-    "    frequency = pd.Series(re.findall(r'\\w+', texto)).value_counts().to_dict()\n",
-    "    res = dict()\n",
-    "    res['version'] = \"0.0.1\"\n",
-    "    res['file'] = number\n",
-    "    res['freqWords'] = frequency\n",
-    "    result_object = collectionWords.insert_one(res)\n",
-    "    \n",
-    "print(\"End -------------------------------\")\n",
-    "print(datetime.datetime.now().time())"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "id": "ca377393",
    "metadata": {},
    "outputs": [
@@ -185,9 +109,18 @@
      "output_type": "stream",
      "text": [
       "Start  -------------------------------\n",
-      "15:45:14.054309\n",
-      "End -------------------------------\n",
-      "04:44:46.322930\n"
+      "12:30:11.254212\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'preproccess_0' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m text \u001b[38;5;241m=\u001b[39m document[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m      6\u001b[0m number \u001b[38;5;241m=\u001b[39m document[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfile\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m----> 7\u001b[0m texto \u001b[38;5;241m=\u001b[39m \u001b[43mpreproccess_0\u001b[49m(text)\n\u001b[0;32m      8\u001b[0m res \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m()\n\u001b[0;32m      9\u001b[0m res[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mversion\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m0.0.1\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'preproccess_0' is not defined"
      ]
     }
    ],
@@ -203,7 +136,7 @@
     "    res['version'] = \"0.0.1\"\n",
     "    res['file'] = number\n",
     "    res['text'] = texto\n",
-    "    result_object = collectionDep_1.insert_one(res)\n",
+    "    result_object = collectionDep_2.insert_one(res)\n",
     "    \n",
     "print(\"End -------------------------------\")\n",
     "print(datetime.datetime.now().time())"
@@ -236,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
